--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-    "python.terminal.executeInFileDir": true,
     "python.terminal.activateEnvironment": true,
-    "python.linting.enabled": true
+    "python.terminal.executeInFileDir": true,
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true
 }
